@@ -157,9 +157,11 @@ jQuery.validator.addMethod("dateNL", function(value, element) {
 );
 
 jQuery.validator.addMethod("time", function(value, element) {
-		return this.optional(element) || /^([01][0-9])|(2[0123]):([0-5])([0-9])$/.test(value);
-	}, "Please enter a valid time, between 00:00 and 23:59"
-);
+	return this.optional(element) || /^([01]\d|2[0-3])(:[0-5]\d){0,2}$/.test(value);
+}, "Please enter a valid time, between 00:00 and 23:59");
+jQuery.validator.addMethod("time12h", function(value, element) {
+	return this.optional(element) || /^((0?[1-9]|1[012])(:[0-5]\d){0,2}(\ [AP]M))$/i.test(value);
+}, "Please enter a valid time, between 00:00 am and 12:00 pm");
 
 /**
  * matches US phone number format
