@@ -11,6 +11,7 @@
 * Improved email method to not allow the dot at the end (valid by RFC, but unwanted here). Fixes #143
 * Fixed swedish and norwedian translations, min/max messages got switched. Fixes #181
 * Fixed #184 - resetForm: should unset lastElement
+* Fixed #71 - improve existing time method and add time12h method for 12h am/pm time format
 
 1.8.1
 ---
